[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel", "setuptools-scm",]

[project]
classifiers = [
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Framework :: AsyncIO",
	"Framework :: Trio",
	"Framework :: AnyIO",
	"License :: OSI Approved",
	"Development Status :: 4 - Beta",
	"Topic :: Communications",
	"Topic :: Internet",
	]
dependencies = [
	"anyio ~= 3.0",
	"transitions",
	"asyncwebsockets >= 0.8",
	"passlib",
	"docopt",
	"pyyaml",
	"attrs >= 19",
	"simplejson",
	"msgpack",
	"moat-util",
	]
dynamic = [ "version",]
keywords = [ "MoaT",]
requires-python = ">=3.8"
name = "moat-mqtt"
description = "Async MQTT broker and client, with optional MoaT-KV support"
readme = "README.rst"
[[project.authors]]
email = "matthias@urlichs.de"
name = "Matthias Urlichs"

[project.license]
file = "LICENSE.txt"

[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat-mqtt"

[tool.flake8]
max-line-length = 99
ignore = [ "F401", "E731", "E502", "E402", "E127", "E123", "W503", "E231", "E203",]

[tool.isort]
line_length = 99
multi_line_output = 3
profile = "black"

[tool.setuptools]
packages = [ "moat.mqtt",]

[tool.setuptools_scm]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py310,py39,check

[testenv]
setenv = 
    PYTHONPATH = {env:PYTHONPATH}{:}{toxinidir}

[testenv:check]
commands = 
    pylint moat/mqtt tests
    flake8p moat/mqtt tests
    black --check moat/mqtt tests
deps = 
    pylint
    black
    flake8-pyproject
    flake8

"""


[tool.pylint]
[tool.pylint.messages_control]
disable = "use-dict-literal,unspecified-encoding,too-many-statements,too-many-return-statements,too-many-locals,too-many-instance-attributes,too-many-branches,too-many-arguments,too-few-public-methods,superfluous-parens,no-else-return,no-else-continue,invalid-name,fixme"
